# coevolving-neural-networks

./: .gitignore  CMakeLists.txt  README.md  creature-visualizer.py
src/: build.h  main.cpp
src/creature/: CMakeLists.txt  Creature.cpp  Creature.h  creature_visualizer.cpp  mutate_demo.cpp
src/engine/collision/: CollisionHandler.cpp  CollisionHandler.h  PenaltyCollisionHandler.cpp  PenaltyCollisionHandler.h
src/engine/core/: ExplicitEuler.cpp  ExplicitEuler.h  Scene.cpp  Scene.h  Simulation.cpp  Simulation.h  SymplecticEuler.cpp  SymplecticEuler.h  Utils.cpp  Utils.h
src/engine/force/: DragForce.cpp  DragForce.h  Force.h  GravityForce.cpp  GravityForce.h  MultiMuscleForce.cpp  MultiMuscleForce.h  MuscleForce.cpp  MuscleForce.h  SpringForce.cpp  SpringForce.h
src/evolutionary/: CMakeLists.txt  Solve.cpp
src/evolutionary/reproducer/: CMakeLists.txt  CrossoverReproducer.cpp  CrossoverReproducer.h  Reproducer.h
src/evolutionary/selector/: CMakeLists.txt  Selector.h  TournamentSelector.cpp  TournamentSelector.h
src/evolutionary/solver/: CMakeLists.txt  EvolveSolver.cpp  EvolveSolver.h  HillClimberSolver.cpp  HillClimberSolver.h  RandomSolver.h  Solver.cpp  Solver.h
src/evolutionary/utils/: CMakeLists.txt  EvolutionaryUtils.cpp  EvolutionaryUtils.h
src/neural/: ActivationFunction.h  ArcTan.h  CMakeLists.txt  NeuralNetwork.cpp  NeuralNetwork.h  ReLU.h  main.cpp
